--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,15 +22,19 @@
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "fraction.js": "^4.2.0",
     "framer-motion": "^10.12.16",
     "jwt-decode": "^3.1.2",
     "lottie-react": "^2.4.0",
+    "moment": "^2.29.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-player": "^2.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "yup": "^1.2.0",
