--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,15 +31,21 @@
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
-    "react-icons": "^4.9.0",
+    "react-icons": "^4.10.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.12.0",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "yup": "^1.2.0",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/react-window": "^1.8.5"
   }
 }
