--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,13 +39,16 @@
     "react-player": "^2.12.0",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.9",
+    "socket.io-client": "^4.7.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@types/react-window": "^1.8.5"
+    "@types/react-window": "^1.8.5",
+    "@types/uuid": "^9.0.2"
   }
 }
